--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,1 +1,33 @@
-// Начните писать стили здесь
+@import "./blocks/main-header.less";
+@import "./blocks/container.less";
+@import "./blocks/promo.less";
+@import "./blocks/type-program.less";
+@import "./blocks/how-it-works.less";
+@import "./blocks/example.less";
+@import "./blocks/contacts.less";
+@import "./blocks/catalog.less";
+@import "./blocks/additional-goods.less";
+@import "./blocks/footer.less";
+@import "./blocks/program-selection.less";
+
+@font-face {
+  font-family: "Oswald";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/oswald/oswaldregular.woff") format("woff2");
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/lato/Lato-Regular.woff") format("woff2");
+  font-display: swap;
+}
+
+body {
+  font-family: "Lato", sans-serif;
+  font-size: 14px;
+  line-height: 18px;
+}
