--- a/source/less/style.less
+++ b/source/less/style.less
@@ -7,7 +7,7 @@
 @import "./blocks/contacts.less";
 @import "./blocks/catalog.less";
 @import "./blocks/additional-goods.less";
-@import "./blocks/footer.less";
+@import "./blocks/main-footer.less";
 @import "./blocks/program-selection.less";
 
 @font-face {
