--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -5,6 +5,8 @@
 }
 
 .catalog__item {
+  display: flex;
+  flex-direction: column;
   margin: 0;
   margin-top: 20px;
   padding: 0;
@@ -22,4 +24,42 @@
 .catalog__info-value,
 .catalog__many-flavors {
   font-size: 12px;
+}
+
+.main-container {
+  width: 320px;
+  margin: auto;
+}
+
+.catalog__block {
+  display: flex;
+}
+
+
+@media (min-width: @tablet-width) {
+  .main-container {
+    width: 768px;
+  }
+
+  .main-nav__link-catalog {
+    color: #000000;
+  }
+
+  .catalog__list {
+    display: grid;
+    grid-template-columns: 324px 324px;
+    gap: 95px 60px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .main-container {
+    width: 1440px;
+  }
+
+  .catalog__list {
+    display: grid;
+    grid-template-columns: 245px 245px 245px 245px;
+    gap: 95px 80px;
+  }
 }
