--- a/source/less/blocks/how-it-works.less
+++ b/source/less/blocks/how-it-works.less
@@ -1,9 +1,16 @@
+.how-it-works__wrapper {
+  display: flex;
+  flex-direction: column;
+  width: 280px;
+  margin: auto;
+}
+
 .how-it-works__list {
-  margin: 0;
   padding: 0;
 }
 
 .how-it-works__item {
+  display: flex;
   margin: 0;
   padding: 0;
   list-style-type: none;
@@ -13,4 +20,41 @@
   font-family: "Oswald", sans-serif;
   font-size: 36px;
   line-height: 40px;
+}
+
+@media (min-width: @tablet-width) {
+  .how-it-works__wrapper {
+    width: 708px;
+  }
+
+  .how-it-works__list {
+    display: grid;
+    grid-template-columns: 280px 280px;
+    gap: 60px 160px;
+  }
+
+  .how-it-works__image {
+    width: 80px;
+    height: 80px;
+  }
+
+  .how-it-works__item {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .how-it-works__description {
+    width: 208px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .how-it-works__wrapper {
+    width: 1220px;
+  }
+
+  .how-it-works__list {
+    display: flex;
+    gap: 60px 120px;
+  }
 }
