--- a/source/less/blocks/main-footer.less
+++ b/source/less/blocks/main-footer.less
@@ -1,3 +1,35 @@
 .main-footer {
   background: #f2f2f2;
+  display: flex;
+  flex-direction: column;
+  width: 320px;
+  align-items: center;
+}
+
+.main-footer__list {
+  display: flex;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.main-footer__html-link {
+  display: flex;
+}
+
+@media (min-width: @tablet-width) {
+  .main-footer__item {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .main-footer {
+    width: 768px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .main-footer {
+    width: 1440px;
+  }
 }
