--- a/source/less/blocks/main-header.less
+++ b/source/less/blocks/main-header.less
@@ -1,3 +1,12 @@
+.main-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.main-header__logo {
+  text-decoration: none;
+}
 
 .main-header__logo-image {
   margin-top: 10px;
@@ -5,10 +14,49 @@
 }
 
 .main-header__logo-text {
-  margin-top: 10px;
+  margin-bottom: 10px;
   margin-left: 56px;
 }
 
 .main-nav__list {
+  display: flex;
+  flex-direction: column;
   list-style-type: none;
+}
+
+.main-nav__link {
+  font-family: "Oswald", sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 20px;
+  text-decoration: none;
+  color: #000000;
+}
+
+@media (min-width: @tablet-width) {
+  .main-nav__toggle {
+    display: none;
+  }
+
+  .main-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 85%;
+  }
+
+  .main-nav__list {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .main-nav__item:not(:last-child) {
+    margin-right: 35px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .main-nav__link {
+    color: #ffffff;
+  }
 }
