--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -3,6 +3,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
+  width: 280px;
+  margin: auto;
 }
 
 .promo__background {
@@ -39,7 +42,38 @@
   text-transform: uppercase;
 }
 
+.promo__production {
+  position: absolute;
+  top: 160px;
+}
+
+.promo__button {
+  margin-top: 150px;
+  width: 280px;
+  height: 40px;
+  border: none;
+  background: #68b738;
+  font-family: "Oswald", sans-serif;
+  font-size: 14px;
+  line-height: 18px;
+  color: #ffffff;
+  text-transform: uppercase;
+  cursor: pointer;
+
+  &:hover {
+    background-color: #5eaa2f;
+  }
+
+  &:active .promo__button-text {
+    opacity: 0.6;
+  }
+}
+
 @media (min-width: @tablet-width) {
+  .promo__wrapper {
+    width: 708px;
+  }
+
   .promo__title {
     color: #000000;
     text-align: left;
@@ -64,8 +98,20 @@
   }
 
   .promo__production {
+    position: static;
     width: 709px;
     height: 609px;
+  }
+
+  .promo__button {
+    position: absolute;
+    top: 285px;
+    left: 65px;
+    margin-top: 0;
+    width: 244px;
+    height: 54px;
+    font-size: 20px;
+    line-height: 20px;
   }
 }
 
@@ -77,6 +123,8 @@
   .promo__wrapper {
     display: flex;
     flex-direction: row;
+    margin-top: 20px;
+    width: 1440px;
   }
 
   .promo__production {
@@ -98,5 +146,12 @@
 
   .promo__text {
     margin-left: 100px;
+  }
+
+  .promo__button {
+    position: absolute;
+    top: 360px;
+    left: 100px;
+    margin-top: 0;
   }
 }
