--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -7,6 +7,7 @@
 .example__wrapper {
   display: flex;
   flex-direction: column;
+  padding-bottom: 40px;
 }
 
 .example__title {
@@ -14,21 +15,76 @@
   font-family: "Oswald", sans-serif;
   font-size: 36px;
   line-height: 40px;
+  margin: 0;
+  margin-bottom: 40px;
 }
 
 .example__quantity {
   font-family: "Oswald", sans-serif;
   font-size: 24px;
   line-height: 24px;
+  text-transform: uppercase;
+  margin: 0;
+  margin-bottom: 7px;
+  width: 124px;
+  height: 56px;
+  border: 1px solid #cdcdcd;
+  border-radius: 3px;
+}
+
+.example__quantity span {
+  display: block;
+  margin-top: 15px;
 }
 
 .example__price {
   font-family: "Oswald", sans-serif;
   font-size: 14px;
   line-height: 20px;
+  margin: 0;
+}
+
+.example__quantity-description {
+  font-family: "Lato", sans-serif;
+  font-size: 12px;
+  line-height: 100%;
+  margin: 0;
+  position: absolute;
+  width: 84px;
+  background-color: #eaeaea;
+  top: 50px;
+  left: 20px;
+}
+
+.example__description {
+  margin: 0;
+  margin-bottom: 20px;
+}
+
+.example__block {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-content: center;
+  gap: 0 32px;
+  margin-bottom: 34px;
+}
+
+.example__data {
+  position: relative;
+  text-align: center;
+}
+
+.example__info {
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 @media (min-width: @tablet-width) {
+  .example__title {
+    padding-top: 43px;
+    margin-bottom: 63px;
+  }
+
   .example {
     width: 708px;
   }
@@ -43,11 +99,44 @@
     width: 560px;
     height: 512px;
   }
+
+  .example__description {
+    margin-bottom: 54px;
+  }
+
+  .example__price {
+    text-align: right;
+    margin-left: 90px;
+    font-size: 20px;
+    line-height: 30px;
+    width: 174px;
+  }
+
+  .example__quantity {
+    width: 162px;
+    height: 72px;
+    font-size: 30px;
+    line-height: 37px;
+  }
+
+  .example__quantity-description {
+    font-size: 14px;
+    line-height: 14px;
+    width: 114px;
+    top: 65px;
+    left: 25px;
+  }
 }
 
 @media (min-width: @desktop-width) {
   .example {
     width: 1220px;
+  }
+
+  .example__title {
+    font-size: 60px;
+    line-height: 60px;
+    margin-bottom: 146px;
   }
 
   .example__wrapper {
@@ -57,10 +146,40 @@
 
   .example__info {
     flex-direction: column;
+    width: 366px;
   }
 
   .example__image {
     width: 560px;
     height: 512px;
+  }
+
+  .example__description {
+    width: 436px;
+  }
+
+  .example__quantity {
+    font-size: 30px;
+    line-height: 37px;
+    width: 162px;
+    height: 72px;
+  }
+
+  .example__quantity-description {
+    font-size: 14px;
+    top: 65px;
+    left: 12px;
+    width: 142px;
+  }
+
+  .example__price {
+    font-size: 20px;
+    line-height: 20px;
+    width: 310px;
+    margin-left: 0;
+  }
+
+  .example__price span {
+    margin-left: 63px;
   }
 }
