--- a/source/less/blocks/how-it-works.less
+++ b/source/less/blocks/how-it-works.less
@@ -7,6 +7,7 @@
 
 .how-it-works__list {
   padding: 0;
+  margin: 0;
 }
 
 .how-it-works__item {
@@ -20,6 +21,26 @@
   font-family: "Oswald", sans-serif;
   font-size: 36px;
   line-height: 40px;
+  margin: 0;
+  margin-top: 20px;
+  margin-bottom: 40px;
+}
+
+.how-it-works__description {
+  margin: 0;
+  margin-left: 20px;
+}
+
+.how-it-works__item:not(:last-child) {
+  margin-bottom: 20px;
+}
+
+.how-it-works__item:last-child {
+  margin-bottom: 49px;
+}
+
+.how-it-works__number {
+  display: none;
 }
 
 @media (min-width: @tablet-width) {
@@ -30,7 +51,8 @@
   .how-it-works__list {
     display: grid;
     grid-template-columns: 280px 280px;
-    gap: 60px 160px;
+    gap: 134px 160px;
+    margin-bottom: 90px;
   }
 
   .how-it-works__image {
@@ -41,10 +63,31 @@
   .how-it-works__item {
     display: flex;
     flex-direction: column;
+    position: relative;
+  }
+
+  .how-it-works__title {
+    margin-top: 45px;
+    margin-bottom: 72px;
   }
 
   .how-it-works__description {
     width: 208px;
+    margin-left: 0;
+    margin-top: 31px;
+    position: relative;
+  }
+
+  .how-it-works__number {
+    display: block;
+    position: absolute;
+    font-family: "Oswald", sans-serif;
+    font-size: 280px;
+    line-height: 280px;
+    color: #f2f2f2;
+    top: -330px;
+    left: 100px;
+    z-index: -1;
   }
 }
 
@@ -56,5 +99,12 @@
   .how-it-works__list {
     display: flex;
     gap: 60px 120px;
+    margin-bottom: 69px;
+  }
+
+  .how-it-works__title {
+    margin-top: 71px;
+    font-size: 60px;
+    line-height: 60px;
   }
 }
