--- a/source/less/blocks/main-header.less
+++ b/source/less/blocks/main-header.less
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 280px;
 }
 
 .main-header__logo {
@@ -10,7 +11,7 @@
 
 .main-header__logo-image {
   margin-top: 10px;
-  margin-left: 20px;
+  margin-left: -70px;
 }
 
 .main-header__logo-text {
@@ -22,6 +23,8 @@
   display: flex;
   flex-direction: column;
   list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
 
 .main-nav__link {
@@ -33,7 +36,101 @@
   color: #000000;
 }
 
+.main-nav {
+  position: relative;
+}
+
+.main-nav__toggle {
+  position: absolute;
+  top: -40px;
+  right: -150px;
+  z-index: 2;
+  display: block;
+  width: 40px;
+  height: 35px;
+  background-color: #ffffff;
+  cursor: pointer;
+  border: none;
+}
+
+.main-nav--closed .main-nav__toggle::before {
+  content: "";
+  position: absolute;
+  top: 7px;
+  left: 5px;
+  width: 24px;
+  height: 2px;
+  background-color: #000000;
+  box-shadow: 0 8px 0 0 #000000, 0 16px 0 0 #000000;
+}
+
+.main-nav--closed .main-nav__toggle:active::before {
+  background-color: fade(#000000, 30%);
+  box-shadow:
+    0 8px 0 0 fade(#000000, 30%),
+    0 16px 0 0 fade(#000000, 30%);
+}
+
+.main-nav--opened .main-nav__toggle {
+  top: -40px;
+  right: -40px;
+
+  &::before,
+  &::after {
+    content: "";
+    position: absolute;
+    top: 16px;
+    left: 8px;
+    width: 24px;
+    height: 2px;
+    background-color: #000000;
+  }
+
+  &::before {
+    transform: rotate(45deg);
+    box-shadow: none;
+  }
+
+  &::after {
+    transform: rotate(-45deg);
+  }
+
+  &:active::before,
+  &:active::after {
+    background-color: fade(#ffffff, 30%);
+  }
+}
+
+.main-nav__wrapper {
+  margin-top: 15px;
+}
+
+.site-list a {
+  position: relative;
+  display: block;
+  text-align: center;
+  padding: 22px 22px 24px 22px;
+  text-transform: uppercase;
+  // background-color: #ffffff;
+  border-top: 1px solid #e6e6e6;
+}
+
+@media (max-width: @mobile-width-only) {
+  .main-nav--closed .main-nav__item {
+    display: none;
+  }
+}
+
 @media (min-width: @tablet-width) {
+  header {
+    padding-top: 15px;
+  }
+
+  .main-header__logo-image {
+    margin-top: 10px;
+    margin-left: 20px;
+  }
+
   .main-nav__toggle {
     display: none;
   }
@@ -42,7 +139,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 85%;
+    width: 708px;
   }
 
   .main-nav__list {
@@ -51,12 +148,88 @@
   }
 
   .main-nav__item:not(:last-child) {
-    margin-right: 35px;
+    margin-right: 25px;
+  }
+
+  .site-list a {
+    padding: 0;
+    border-top: none;
+
+    &:hover {
+      opacity: 0.6;
+    }
+
+    &:active {
+      opacity: 0.3;
+    }
+  }
+
+  .main-nav__wrapper {
+    margin-top: 0;
+  }
+
+  .site-list__item--active {
+    position: relative;
+  }
+
+  .site-list__item--active::before {
+    content: "";
+    position: absolute;
+    top: 30px;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: #68b738;
   }
 }
 
 @media (min-width: @desktop-width) {
+  .main-header {
+    width: 1220px;
+  }
+
   .main-nav__link {
     color: #ffffff;
+  }
+
+  .main-header__logo-image {
+    margin-top: 10px;
+    margin-left: 20px;
+  }
+
+  .site-list a {
+    color: #ffffff;
+    padding: 0;
+    border-top: none;
+
+    &:hover {
+      opacity: 0.6;
+    }
+
+    &:active {
+      opacity: 0.3;
+    }
+  }
+
+  .main-nav__wrapper {
+    margin-top: 0;
+  }
+
+  .site-list__item--active {
+    position: relative;
+  }
+
+  .site-list__item--active::before {
+    content: "";
+    position: absolute;
+    top: 30px;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: #ffffff;
+  }
+
+  .main-nav__item .main-nav__link-catalog {
+    color: #000000;
   }
 }
