--- a/source/less/blocks/type-program.less
+++ b/source/less/blocks/type-program.less
@@ -10,46 +10,124 @@
 .type-program__item {
   display: flex;
   flex-direction: column;
+  position: relative;
   margin: 0;
   padding: 0;
   margin-top: 20px;
   list-style-type: none;
   width: 280px;
   background: #f2f2f2;
+  padding-bottom: 22px;
 }
 
 .type-program__title {
   font-family: "Oswald", sans-serif;
   font-size: 24px;
   line-height: 37px;
+  margin: 0;
+  text-transform: uppercase;
+  position: absolute;
+  left: 90px;
+  top: 30px;
 }
 
 .type-program__transition-catalog {
   font-family: "Oswald", sans-serif;
   font-size: 16px;
   line-height: 16px;
+  margin-left: 19px;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #000000;
+  position: relative;
+  display: flex;
+
+  &::before {
+    content: "";
+    position: absolute;
+    width: 240px;
+    height: 1px;
+    background-color: #d9d9d9;
+    top: -19px;
+    left: 0;
+  }
+
+  &:hover .type-program__icon {
+    background: url("../img/index/icon32.png") no-repeat;
+    width: 32px;
+  }
+
+  &:active {
+    opacity: 0.6;
+  }
+}
+
+.type-program__image {
+  margin-left: 22px;
+  margin-top: 24px;
+}
+
+.type-program__image-weight_gain {
+  margin-left: 13px;
+  margin-top: 24px;
+}
+
+.type-program__description {
+  width: 227px;
+  margin-left: 20px;
+  margin-bottom: 42px;
+}
+
+.type-program__icon {
+  margin-left: 15px;
+  background-image: url("../img/index/icon.png");
+  width: 24px;
+  height: 12px;
+  background-position: center;
 }
 
 @media (min-width: @tablet-width) {
   .type-program__item {
     width: 708px;
     flex-direction: row;
+    padding-bottom: 57px;
   }
 
   .type-program__image {
     order: 2;
     width: 200px;
     height: 200px;
+    margin-top: 81px;
+    margin-left: 54px;
   }
 
   .type-program__image-weight_gain {
     order: 2;
     width: 268px;
     height: 200px;
+    margin-top: 91px;
+    margin-left: 20px;
   }
 
   .type-program__description {
     width: 340px;
+    margin-left: 52px;
+    margin-bottom: 52px;
+  }
+
+  .type-program__title {
+    position: static;
+    margin-top: 77px;
+    margin-left: 53px;
+    margin-bottom: 24px;
+  }
+
+  .type-program__transition-catalog {
+    margin-left: 54px;
+
+    &::before {
+      background-color: #e9e9e900;
+    }
   }
 }
 
@@ -62,6 +140,8 @@
   .type-program__item {
     width: 570px;
     height: 374px;
+    margin-top: 82px;
+    padding: 0;
   }
 
   .type-program__item:not(:last-child) {
@@ -72,11 +152,44 @@
     order: 0;
     width: 100px;
     height: 100px;
+    margin-left: 52px;
+    margin-top: 47px;
   }
 
   .type-program__image-weight_gain {
     order: 0;
     width: 134px;
     height: 100px;
+    margin-left: 33px;
+    margin-top: 47px;
+  }
+
+  .type-program__title {
+    font-size: 36px;
+    line-height: 36px;
+  }
+
+  .type-program__info {
+    position: relative;
+  }
+
+  .type-program__description {
+    position: absolute;
+    width: 457px;
+    height: 72px;
+    top: 170px;
+    left: -155px;
+  }
+
+  .type-program__transition-catalog {
+    font-size: 20px;
+    line-height: 30px;
+    position: absolute;
+    left: -155px;
+    top: 270px;
+  }
+
+  .type-program__icon {
+    margin-top: 8px;
   }
 }
