--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: column;
   padding-bottom: 40px;
+  position: relative;
 }
 
 .example__title {
@@ -79,6 +80,87 @@
   margin-bottom: 20px;
 }
 
+.example__image-cat-little {
+  position: absolute;
+  top: 375px;
+  left: 144px;
+  width: 140px;
+  height: 256px;
+  background-image: url("../img/index/cat-slider-little.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.example__image-cat-big {
+  width: 140px;
+  height: 256px;
+  background-image: url("../img/index/cat-slider-big.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.example__slider-rectangle {
+  position: absolute;
+  width: 4px;
+  height: 256px;
+  top: 0;
+  left: 18px;
+  border-radius: 2px;
+  background-color: #666666;
+  z-index: -1;
+}
+
+.example__slider {
+  height: 256px;
+  width: 40px;
+  top: 375px;
+  left: 122px;
+  position: absolute;
+  z-index: 2;
+
+  &:hover .svg-rect {
+    fill: #68b738;
+    cursor: pointer;
+  }
+
+  &:hover rect {
+    stroke: #68b738;
+    cursor: pointer;
+  }
+
+  &:hover path {
+    fill: #68b738;
+    cursor: pointer;
+  }
+
+  &:hover .example__slider-rectangle {
+    background-color: #68b738;
+  }
+
+  &:active .svg-rect {
+    fill: #68b738;
+    cursor: pointer;
+    opacity: 0.6;
+  }
+
+  &:active rect {
+    stroke: #68b738;
+    cursor: pointer;
+    opacity: 0.6;
+  }
+
+  &:active path {
+    fill: #68b738;
+    cursor: pointer;
+    opacity: 0.6;
+  }
+
+  &:active .example__slider-rectangle {
+    background-color: #68b738;
+    opacity: 0.6;
+  }
+}
+
 @media (min-width: @tablet-width) {
   .example__title {
     padding-top: 43px;
@@ -95,7 +177,6 @@
   }
 
   .example__image {
-    margin: auto;
     width: 560px;
     height: 512px;
   }
@@ -126,6 +207,36 @@
     top: 65px;
     left: 25px;
   }
+
+  .example__image-cat-little {
+    top: 375px;
+    left: 284px;
+    width: 280px;
+    height: 512px;
+  }
+
+  .example__image-cat-big {
+    width: 280px;
+    height: 512px;
+  }
+
+  .example__slider-rectangle {
+    height: 512px;
+    width: 4px;
+    left: 18px;
+  }
+
+  .example__slider-svg {
+    position: absolute;
+    top: 145px;
+  }
+
+  .example__slider {
+    height: 512px;
+    width: 40px;
+    top: 375px;
+    left: 262px;
+  }
 }
 
 @media (min-width: @desktop-width) {
@@ -152,6 +263,7 @@
   .example__image {
     width: 560px;
     height: 512px;
+    margin-left: 175px;
   }
 
   .example__description {
@@ -181,5 +293,17 @@
 
   .example__price span {
     margin-left: 63px;
+  }
+
+  .example__image-cat-little {
+    top: 10px;
+    left: 719px;
+  }
+
+  .example__slider {
+    height: 512px;
+    width: 40px;
+    top: 10px;
+    left: 873px;
   }
 }
