--- a/source/less/blocks/program-selection.less
+++ b/source/less/blocks/program-selection.less
@@ -85,6 +85,17 @@
   font-size: 24px;
   line-height: 26px;
   margin-bottom: 35px;
+  position: relative;
+
+  &::before {
+    content: "";
+    position: absolute;
+    width: 89px;
+    height: 2px;
+    background-color: #68b738;
+    right: -10px;
+    top: 15px;
+  }
 }
 
 .program-selection__contact-label {
@@ -118,6 +129,17 @@
   font-size: 24px;
   line-height: 26px;
   margin-bottom: 37px;
+  position: relative;
+
+  &::before {
+    content: "";
+    position: absolute;
+    width: 150px;
+    height: 2px;
+    background-color: #68b738;
+    right: -10px;
+    top: 15px;
+  }
 }
 
 .program-selection__comment-value {
@@ -134,6 +156,17 @@
   font-family: "Oswald", sans-serif;
   font-size: 24px;
   line-height: 26px;
+  position: relative;
+
+  &::before {
+    content: "";
+    position: absolute;
+    width: 130px;
+    height: 2px;
+    background-color: #68b738;
+    right: -10px;
+    top: 15px;
+  }
 }
 
 .program-selection__additionally-name {
@@ -154,6 +187,15 @@
   border: none;
   color: #ffffff;
   margin-bottom: 21px;
+  cursor: pointer;
+
+  &:hover {
+    background-color: #5eaa2f;
+  }
+
+  &:active span {
+    opacity: 0.6;
+  }
 }
 
 .program-selection__required-fields {
@@ -161,6 +203,14 @@
   font-size: 14px;
   line-height: 16px;
   text-align: center;
+}
+
+.program-selection__user-value,
+.program-selection__contact-value,
+.program-selection__comment-value {
+  &:hover {
+    border: 1px solid #cdcdcd;
+  }
 }
 
 @media (min-width: @tablet-width) {
@@ -235,12 +285,42 @@
   .program-selection__contact-title {
     font-size: 36px;
     line-height: 36px;
+
+    &::before {
+      width: 145px;
+      top: 20px;
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      width: 30px;
+      height: 2px;
+      background-color: #68b738;
+      left: -40px;
+      top: 20px;
+    }
   }
 
   .program-selection__comment-title {
     font-size: 36px;
     line-height: 36px;
     margin-bottom: 76px;
+
+    &::before {
+      width: 450px;
+      top: 20px;
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      width: 30px;
+      height: 2px;
+      background-color: #68b738;
+      left: -40px;
+      top: 20px;
+    }
   }
 
   .program-selection__comment-value {
@@ -253,6 +333,21 @@
   .program-selection__additionally-title {
     font-size: 36px;
     line-height: 36px;
+
+    &::before {
+      width: 450px;
+      top: 20px;
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      width: 30px;
+      height: 2px;
+      background-color: #68b738;
+      left: -40px;
+      top: 20px;
+    }
   }
 
   .program-selection__additionally-name {
@@ -291,6 +386,27 @@
   .program-selection__form-block {
     display: flex;
     justify-content: space-between;
+  }
+
+  .program-selection__contact-title {
+    &::before {
+      width: 680px;
+      top: 20px;
+    }
+  }
+
+  .program-selection__comment-title {
+    &::before {
+      width: 1000px;
+      top: 20px;
+    }
+  }
+
+  .program-selection__additionally-title {
+    &::before {
+      width: 950px;
+      top: 20px;
+    }
   }
 
   .program-selection__form-group .program-selection__user:nth-child(1) .program-selection__user-value {
